<resources>
    <string name="app_name">MiAudote</string>
    <string name="email_hint">Ex.: xxxxxxxx@gmail.com</string>
    <string name="senha_hint">Digite a sua senha:</string>
    <string name="cadastro"><u>não possuo cadastro</u></string>
    <string name="entrar">ENTRAR</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="nome_da_ong">NOME DA ONG</string>
    <string name="nome_animal">NOME ANIMAL</string>
    <string name="saiba_mais">SAIBA MAIS</string>
    <string name="adote">Adote</string>
    <string name="ache">Ache</string>
    <string name="ong_s">ONG\'s</string>
    <string name="perfil">Perfil</string>
    <string name="e_mail">E-MAIL</string>
    <string name="senha">SENHA</string>
    <string name="mostrar_senha">MOSTRAR SENHA</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="perfil_fragment">perfil fragment</string>
    <string name="adotar_fragment">adotar fragment</string>
    <string name="mapa_fragment">mapa fragment</string>
    <string name="imagem_da_logo_de_uma_ong">imagem da logo de uma ong</string>
    <string name="imagem_de_um_animal">imagem de um animal</string>
    <string name="ong_fragment">ong fragment</string>
    <string name="logo_alternativa_do_miaudote">logo alternativa do miaudote</string>
    <string name="logo_do_miaudote">logo do miaudote</string>
    <string name="apenas_uma_divis_ria_entre_os_bot_es">apenas uma divisória entre os botões</string>
    <string name="insira_seu_nome">INSIRA SEU NOME</string>
    <string name="telefone">TELEFONE</string>
    <string name="confirmar_senha">CONFIRMAR SENHA</string>
    <string name="btn_confirmar_cad">botão para ir a página de confirmação de cadastro</string>
    <string name="btn_voltar_login">botõa para voltar a página de login</string>
    <string name="crie_uma_senha">CRIE UMA SENHA</string>
    <string name="confirmar_sua_senha">CONFIRMAR SUA SENHA</string>
    <string name="carta_confirmacao">gatinho segurando uma carta : imagem de confirmação de login</string>
    <string name="confirmar_cadastro">CONFIRMAR CADASTRO</string>
    <string name="codigo_6dig">Enviamos um código de 6 (seis) dígitos para o seu número de celular</string>
    <string name="btn_reenviar">Reenviar código</string>
    <string name="telefone_hint">Ex.: (xx) x xxxx-xxxx</string>
    <string name="title_activity_ong_page">ONG_Page</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="seu_perfil">SEU PERFIL</string>
    <string name="mudar_senha">MUDAR SENHA</string>
    <string name="termos_de_seguran_a">TERMOS DE SEGURANÇA</string>
    <string name="sobre_n_s">SOBRE NÓS</string>
    <string name="bot_o_para_saber_sobre_os_criadores_do_projeto">botão para saber sobre os criadores do projeto</string>
    <string name="bot_o_para_saber_sobre_termos_de_seguran_a">botão para saber sobre termos de segurança</string>
    <string name="bot_o_para_mudar_sua_senha">botão para mudar sua senha</string>
    <string name="mudar_perfil">MUDAR PERFIL</string>
    <string name="email_randola_gmail_com">email_randola@gmail.com</string>
    <string name="imagem_enviada_pelo_usu_rio">imagem enviada pelo usuário</string>
    <string name="nome_usu_rio">NOME USUÁRIO</string>
    <string name="vetor_de_um_l_pis">vetor de um lápis</string>
    <string name="vetor_de_um_livro">vetor de um livro</string>
    <string name="vetor_da_silhueta_de_uma_pessoa">vetor da silhueta de uma pessoa</string>
    <string name="deseja_sair">DESEJA SAIR?</string>
    <string name="nao">NÃO</string>
    <string name="sim">sim</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ac varius sapien. Suspendisse nec ex eget lacus condimentum imperdiet nec sed enim. Suspendisse elementum orci leo, a sagittis diam tincidunt et. Pellentesque rutrum eros dignissim facilisis tristique. Duis in elit semper, gravida augue eget, sollicitudin lectus. Vivamus varius eros ex, eu tempor nibh mollis nec. Mauris sit amet consectetur sapien, in elementum tortor. Vivamus sed interdum lorem, eget aliquam augue.</string>
    <string name="adicione_pet_adocao">ADICIONE O PET - ADOÇÃO</string>
    <string name="adicione_a_foto">adicione a foto do animal</string>
    <string name="informa_es">INFORMAÇÕES</string>
    <string name="nome">NOME</string>
    <string name="insira_o_nome_do_animal">INSIRA O NOME DO ANIMAL</string>
    <string name="selecione">SELECIONE</string>
    <string name="esp_cie">ESPÉCIE</string>
    <string name="idade">IDADE</string>
    <string name="salvar">SALVAR</string>
    <string name="nome_do_animal">nome do animal</string>
    <string name="especie_doispontos">ESPÉCIE:</string>
    <string name="idadedoispontos">idade:</string>
    <string name="e_mail_doispontos">e-mail:</string>
    <string name="telefone_doispontos">telefone:</string>
    <string name="filtrar_por">FILTRAR POR...</string>
    <string name="web_client_id">478798480234-sbnca72agsmnbmreef6om26vkhfo14hf.apps.googleusercontent.com</string>
    <string name="atualizar">atualizar</string>
    <string name="e_mail_novo">E-MAIL NOVO</string>
    <string name="aviso_email">Note que o novo email não pode ser igual ao anterior.</string>
    <string name="e_mail_anterior">E-MAIL ANTERIOR</string>
    <string name="mudar_e_mail">MUDAR E-MAIL</string>
    <string name="btn_pagAnt">botão para voltar a página anterior</string>
    <string name="aviso_senha">Note que a nova senha não pode ser igual a anterior.</string>
    <string name="senha_anterior">senha anterior</string>
    <string name="senha_nova">senha nova</string>
    <string name="mudar_user_data">mudar seus dados</string>
    <string name="nome_atual">DIGITE O NOME ATUAL</string>
    <string name="imagem">imagem</string>
    <string name="info_img_edtUserData">Carregue uma imagem PNG, JPEG ou JPG de no máximo 2MB. Prefira imagens no formato quadrado, caso contrário a imagem será cortada e centralizada, podendo não ficar da forma desejada.</string>
    <string name="envie_sua_foto">envie sua foto</string>
</resources>