<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserData.Actv_EdtDados"
    android:background="#FAF9F6"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnEdtUser_back"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:contentDescription="@string/btn_pagAnt"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_chevron_left_24"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEdtUserData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"

            android:fontFamily="@font/arimo_variable_font_wght"
            android:gravity="center"
            android:text="@string/mudar_user_data"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEdt_userDataNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="300dp"

            android:fontFamily="@font/arimo_variable_font_wght"
            android:text="@string/nome"
            android:textColor="@color/black"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEdtUserData" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_novoNome"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:background="@drawable/edt_txt_design"

            android:hint="@string/nome_atual"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#D86A6A6A"
            android:textSize="12sp"

            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEdt_userDataNome" />

        <TextView
            android:id="@+id/txtEdt_userDataImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="290dp"

            android:fontFamily="@font/arimo_variable_font_wght"
            android:text="@string/imagem"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_novoNome" />

        <ImageView
            android:id="@+id/edt_fotoPerfil"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="208dp"

            android:background="#9CB8B8B8"
            android:contentDescription="@string/imagem_enviada_pelo_usu_rio"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEdt_userDataImg" />

        <TextView
            android:id="@+id/txt_avisoImg"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"

            android:fontFamily="@font/arimo_variable_font_wght"
            android:text="@string/info_img_edtUserData"
            android:textColor="#515151"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edt_fotoPerfil"
            app:layout_constraintTop_toBottomOf="@+id/edt_novoNome" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAttFotoPerfil"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="#03A9F4"
            android:contentDescription="@string/envie_sua_foto"

            android:text="@string/envie_sua_foto"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edt_fotoPerfil"
            app:layout_constraintTop_toBottomOf="@+id/txt_avisoImg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAttDadosUser"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/btn_perfil"
            android:contentDescription="@string/atualizar"

            android:text="@string/atualizar"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_fotoPerfil" />

        <ProgressBar
            android:id="@+id/progressBarEdtUser"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="142dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>