<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserData.Actv_EdtEmail"
    android:background="#FAF9F6"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnEdtEmail_back"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:contentDescription="@string/btn_pagAnt"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_chevron_left_24"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEdtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"

            android:fontFamily="@font/arimo_variable_font_wght"
            android:gravity="center"
            android:text="@string/mudar_e_mail"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_editar_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="222dp"

            android:fontFamily="@font/arimo_variable_font_wght"
            android:text="@string/e_mail_anterior"
            android:textColor="@color/black"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEdtEmail" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editar_email_edt"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:background="@drawable/edt_txt_design"

            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#D86A6A6A"
            android:textSize="12sp"

            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_editar_email" />

        <TextView
            android:id="@+id/txt_novo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="252dp"

            android:fontFamily="@font/arimo_variable_font_wght"
            android:text="@string/e_mail_novo"
            android:textColor="@color/black"
            android:textSize="14sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editar_email_edt" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_novoEmail"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:background="@drawable/edt_txt_design"

            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#D86A6A6A"
            android:textSize="12sp"

            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_novo_email" />

        <TextView
            android:id="@+id/txt_aviso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="54dp"

            android:fontFamily="@font/arimo_variable_font_wght"
            android:text="@string/aviso_email"
            android:textColor="#515151"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_novoEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAttEmail"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="@drawable/btn_perfil"

            android:text="@string/atualizar"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"

            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_aviso" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>